--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/holder_name"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="left|center_vertical"
         android:text="1"
-        android:textColor="@color/abc_primary_text_material_light" />
-</FrameLayout>
+        android:textColor="@color/abc_primary_text_material_light"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/holder_address"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="left|center_vertical"
+        android:text="1"
+        android:textColor="@android:color/darker_gray" />
+</LinearLayout>
