--- a/app/src/main/res/layout/section_ex1_item.xml
+++ b/app/src/main/res/layout/section_ex1_item.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:gravity="center_vertical"
-        android:text="characteristics:" />
+        android:text="characteristics:"
+        android:textSize="10sp"/>
 
     <TextView
         android:id="@+id/tvItem"
@@ -24,7 +25,8 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:gravity="center_vertical"
-        android:text="Item test text" />
+        android:text="Item test text"
+        android:textSize="10sp"/>
 
 
 </LinearLayout>
