--- a/app/src/main/res/menu/services_menu.xml
+++ b/app/src/main/res/menu/services_menu.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.actionbartest.MainActivity" >
+    xmlns:hhble ="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/menu_connect"
         android:title="connect"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText"/>
+        hhble:showAsAction="always"/>
     <item android:id="@+id/menu_disconnect"
         android:title="disconnect"
         android:orderInCategory="101"
-        android:showAsAction="ifRoom|withText"/>
+        hhble:showAsAction="always"/>
 </menu>
