--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,41 @@
     <color name="app_background_color">#FAFAFA</color>
     <color name="item_selected_background_color">#C7C7CC</color>
     <color name="image_placeholder_background_color">#C7C7CC</color>
+
+    <!--NavigationBar-->
+    <color name="navigation_bar_background_color_light">#FFFDF8</color>
+    <color name="divider_color">#E1E1E1</color>
+
+    <drawable name="emoji_tab_normal">#00000000</drawable>
+
+    <drawable name="white">#FFFFFF</drawable>
+    <drawable name="drawable_f5f5f5">#f5f5f5</drawable>
+    <drawable name="drawable_c2c2c2">#c2c2c2</drawable>
+    <drawable name="drawable_8044b2">#8044b2</drawable>
+    <drawable name="drawable_985ec9">#985ec9</drawable>
+
+    <color name="color_584766">#584766</color>
+    <color name="color_ed5564">#ed5564</color>
+    <color name="color_c2c2c2">#c2c2c2</color>
+    <color name="color_e1e1e1">#e1e1e1</color>
+    <color name="color_d7c2c2c2">#d7c2c2c2</color>
+    <color name="color_313131">#313131</color>
+    <color name="color_4a4a4a">#4a4a4a</color>
+    <color name="color_985ec9">#985ec9</color>
+    <color name="color_959595">#959595</color>
+    <color name="color_8044b2">#8044b2</color>
+    <color name="color_e8e6ec">#e8e6ec</color>
+    <color name="color_ebebeb">#ebebeb</color>
+    <color name="color_white">#ffffff</color>
+    <color name="color_ff888888">#ff888888</color>
+    <color name="color_32000000">#32000000</color>
+    <color name="color_88000000">#88000000</color>
+    <color name="color_212121">#212121</color>
+    <color name="color_646464">#646464</color>
+    <color name="color_fdfdfd">#fdfdfd</color>
+    <color name="color_f4f4f4">#f4f4f4</color>
+    <color name="color_f5f5f5">#f5f5f5</color>
+    <color name="color_ffe5e8">#ffe5e8</color>
+    <color name="color_black">#000000</color>
+    <drawable name="drawable_bg">#88000000</drawable>
 </resources>
