--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,11 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+    <style name="style_navigation_bar">
+        <item name="android:id">@id/title_bar</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">@color/color_646464</item>
+    </style>
+
 </resources>
