--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     tools:context="com.hhit.hhble.MainActivity">
     <com.hhit.hhble.widget.NavigationBar
         style="@style/style_navigation_bar"
-        class="com.putao.chat.widget.NavigationBar"
-        android:layout_width="match_parent"
-        app:nav_main_title="首页">
+        android:layout_width="16dp"
+        app:nav_main_title="首页"
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteY="13dp"
+        tools:layout_editor_absoluteX="74dp">
 
     </com.hhit.hhble.widget.NavigationBar>
 
@@ -20,12 +22,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
         app:layout_constraintVertical_bias="0.0"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
