--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/color_ebebeb"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hhit.hhble.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!--app:nav_left_icon="@drawable/back_selector"-->
     <com.hhit.hhble.widget.NavigationBar
         style="@style/style_navigation_bar"
-        android:layout_width="16dp"
-        app:nav_main_title="首页"
-        android:layout_height="0dp"
-        tools:layout_editor_absoluteY="13dp"
-        tools:layout_editor_absoluteX="74dp">
+        android:layout_width="match_parent"
+        app:nav_left_icon="@drawable/back_selector"
+        app:nav_main_title="选则标签">
 
     </com.hhit.hhble.widget.NavigationBar>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:divider="#ffff0000"
         android:dividerHeight="10dp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+</LinearLayout>
