--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@drawable/item_bg">
 
     <TextView
         android:id="@+id/tv_name"
