--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="app_background_color">#FAFAFA</color>
+    <color name="app_background_color">#fafafa</color>
     <color name="item_selected_background_color">#C7C7CC</color>
     <color name="image_placeholder_background_color">#C7C7CC</color>
 
