--- a/app/src/main/res/layout/item_trans.xml
+++ b/app/src/main/res/layout/item_trans.xml
@@ -10,19 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_toStartOf="@+id/tv_status"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|center_horizontal"
         android:text="TextView" />
 
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentRight="false"
-        android:layout_marginRight="30dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:text="TextView" />
 </RelativeLayout>
